Fix the .scene.active background not appearing in dark mode

--- a/display/shared/styling/themes/dark-theme.css
+++ b/display/shared/styling/themes/dark-theme.css
@@ -97,6 +97,10 @@
   background: var(--ui-background-dark-texture);
 }
 
+.theme-dark #navigation #scene-list .scene.active {
+  background: var(--ui-background-active-texture);
+}
+
 .theme-dark #hotbar .macro {
   background: rgba(43, 43, 43, 0.5);
 }
